assets/css/style.css
/* ... */
#menu li {
    font-size: 120%;
    list-style-type: none;
    margin: 0 15px;
}

#menu a{
    color:inherit;
    text-decoration: none;
}

#logo, #menu{
    line-height: 75px;
}

#menu a:hover{
    border-bottom: 1px solid chocolate;
    border-top: 1px solid chocolate;
}

.active{
    border-bottom: 1px solid black;
}

#menu button{
    background-color: inherit;
    color: chocolate;
}

#menu button:hover{
    color:black ;
}

/* This is the checkbox used to show and collapse the navigation menu for smaller screens */
#nav-toggle, .nav-toggle-label {
    display: none;
}

/* hero image */
#hero-image-container {
    background-image: url("../images/guitaronfire.jpg");
    height: 600px;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 1920px 1200px;
}

/* Homepage description section */
#offer-title {
    text-align: center;
    margin: 2rem 0;
}

#description {
    display: grid;
    grid-template-columns: auto auto;
    min-height: 100vh;
    margin: auto;
    max-width: 1600px;
}

#description img {
    width: 100%;
    height: auto;
    border-radius: 50%;
    max-width: 600px;
}

#description div {
    width: 100%;
    height: auto;
    padding: 2rem 3rem;
    text-align: center;
}

.left-about {
    float: left;
    clear: left;
}

.right-about {
    float: right;
    clear: right;
}

/* Opening hours div */
td, th {
    padding: 0 1rem;
}

#opening-hours {
    color: rgb(231, 201, 146);
    height: 50%;
    border: 1px solid grey;
    box-sizing: border-box;
    background-color: black;
    margin: auto;
    max-width: 350px;
}

#opening-hours h4 {
    text-align: left;
}

/* iframe */
iframe {
    width: 100%;
    min-height: 300px;
}

/* footer */
footer {
    width: 100%;
    background-color: rgb(231, 201, 146);
    height: 150px;
    padding: 45px 0;
}


#social-media {
    display: flex;
    justify-content: space-evenly;
}

#social-media img {
    height: 60px;
    width: 60px;
}

#social-media li {
    list-style-type: none;
}

/* newsletter form */

form * {
    clear: left;
}

form {
    padding: 10px 20px;
}

.text-input {
    width: 100%;
    border: 1px solid black;
}

#subscribe-button {
    background-color: rgb(231, 201, 146);
    color: black;
}

/* instruments page */
#instruments-nav{
    display: flex;
    justify-content: space-between;
    padding: 15px 60px;
    background-color: black;
}

#instruments-nav  a {
    color:  rgb(231, 201, 146);
}

.grid-container{
    display: grid;
    grid-template-columns: auto auto auto auto;
    column-gap: 30px;
    row-gap: 30px;
    margin: auto;
    max-width: 1600px;
}

#instrument-section {
    padding-bottom: 180px;
    padding: 15px 0;
    color: chocolate;
    text-align: center;
}

.instrument-category {
    grid-column-start: 1;
    grid-column-end: 5;
}

.vertical-images img{
    height: 400px;
    width: 100%;
    object-fit: cover;
}

.horizontal-images img {
    height: 200px;
    width: 100%;
    object-fit: cover;
}

.grid-item {
    color: black;
}


#buyModal i {
    font-size: 1rem;
}

#book-button{
    background-color: rgb(231, 201, 146);
    color: black;
}

.buy-button{
    padding: 10px 15px;
    border-radius: 20%;
    background-color: rgb(231, 201, 146);
}

/* About Us page */
#about-us-section {
    display: block;
    min-height: 100vh;
}

#about-us-main {
    display: grid;
    grid-template-columns: auto;
    margin: 0 auto;
    min-height: 100vh;
    max-width: 1290px;
    background-image: url("../images/black-microphone.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

#about-us-main div {
    width: 100%;
    max-width: 800px;
    margin: auto;
    text-align: center;
    height: 30%;
}

#about-us-main p {
    background-color: rgba(0,0,0,.5);
    width: 66%;
    margin: 0 auto;
}

#first-paragraph {
    color: rgb(231, 201, 146)
}

#second-paragraph {
    color: rgb(231, 201, 146)
}

#third-paragraph {
    color: rgb(231, 201, 146)
}

/* contact us page */
#contact-us-section {
    display: grid;
    grid-template-columns: auto auto;
    margin: 0 auto;
    min-height: 100vh;
    padding: 75px 0;
    align-items: center;
}

#your-query-fieldset{
    max-width: 400px;
    border: 1px solid black;
    grid-column-start: 2;
    grid-column-end: 3;
    margin: auto;
    padding-top: 60px;
}

#submit-button{
    background-color: rgb(231, 201, 146);
    color: black;
    padding: 10px 15px;
    border-radius: 10px;
    margin-top: 30px;
}

#contact-information {
    text-align: center;
    width: 100%;
    font-size: 1.5rem;
}

#contact-information table {
    margin: auto;
    vertical-align: middle;
    display: inline-block;
    background-color: black;
    color: rgb(231, 201, 146);
}

#query-text {
    height: 5rem;
}
/* ... */

